--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Verificar si un número telefónico está registrado en WA",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "start": "node index.js"
   },
   "author": "Carlos Espejel",
   "license": "ISC",
